--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>Game of life</title>
+
+    <style>
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
+    </style>
 </head>
 
 <body>
